--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="images/badura.png" alt="To jest super badura">
+            <img src="images/logo-adare-restaurant.png" alt="To jest super badura">
         </header>
         <nav>
 
