początek tworzenia nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
             <img src="images/logo-adare-restaurant.png" alt="To jest super badura">
         </header>
         <nav>
-
+            <a href="#">HOME</a>
+            <a href="#">MENU</a>
+            <a href="#">ORDER</a>
+            <a href="#">ONLINE</a>
+            <a href="#">GIFT</a>
+            <a href="#">VOUCHER</a>
+            <a href="#">CATERING</a>
+            <a href="#">CONTACT</a>
         </nav>
         <main>
             <h1>let's meat</h1>
