--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
         <nav>
             <a href="#">HOME</a>
             <a href="#">MENU</a>
-            <a href="#">ORDER</a>
-            <a href="#">ONLINE</a>
-            <a href="#">GIFT</a>
-            <a href="#">VOUCHER</a>
+            <a href="#">ORDER ONLINE</a>
+            <a href="#">GIFT VOUCHER</a>
             <a href="#">CATERING</a>
             <a href="#">CONTACT</a>
         </nav>
