IFrame, google mapa

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             <p>We love sharing good food with great people. We bring over 30 years industry experience and passion to     <a href="#">Adare</a>. With a dishes that are carefully designed to bring you a truly satisfying Irish food experience that you are sure to remember.</p>
             <a href="mailto:knapik-m@o2.pl?Subject=Reservation" target="_blank" >MAKE RESERVATION</a>
         </main>
+
+        <section class="maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1274.3540098300332!2d18.67007295026146!3d50.29737797456054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47113055d885b20f%3A0x13ea82acea6b58b8!2sHotel%20Diament%20Economy%20Gliwice!5e0!3m2!1spl!2spl!4v1698895216170!5m2!1spl!2spl" width="1024" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+
         <footer>
             <p>Main St. Blackabey. Adare. Co. Limeric - Copyright 2017 ©</p>
         </footer>
